--- a/translations/kangyur/placeholders/003-010_toh1-15-chapter_15_on_shelter.xml
+++ b/translations/kangyur/placeholders/003-010_toh1-15-chapter_15_on_shelter.xml
@@ -8,6 +8,10 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">śayanāsanavastu</title>
                 <title type="mainTitle" xml:lang="en">Chapter 15: On Shelter</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.2 <date>2022</date>
+                </edition>
+            </editionStmt>
             <publicationStmt status="">
                 <idno xml:id="UT22084-003-010"/>
             </publicationStmt>
@@ -15,16 +19,15 @@
                 <bibl key="toh1-15" type="chapter">
                     <ref>Toh 1-15</ref>
                     <biblScope>vol:3,ff.187r-222r(pp.373-443)</biblScope>
-                    <location count-pages="71">
-                        <start volume="3" page="375"/>
-                        <end volume="3" page="445"/>
+                    <location work="UT4CZ5369" count-pages="71">
+                        <volume number="3" start-page="373" end-page="443"/>
                     </location>
                     <idno parent-id="O1JC114941JC11497" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12919" work="W22084"/>
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:31:10 by admin</note>
+                <note type="lastUpdated" date-time="2022-09-20T10:04:34.774Z" user="admin">20/09/2022 10:04:34</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-09-20T10:04:30.763Z" user="john">Typo corrected</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
