--- a/translations/kangyur/translations/066-015_toh257-the_sutra_of_the_quintessence_of_the_sun.xml
+++ b/translations/kangyur/translations/066-015_toh257-the_sutra_of_the_quintessence_of_the_sun.xml
@@ -33,10 +33,10 @@
         <sponsor ref="sponsors.xml#sponsor-121">Manju Sun and Jamyang Sun</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2022</date>
+                <edition>v 1.0.1 <date>2022</date>
                 </edition>
             </editionStmt>
-      <publicationStmt status="1.a">
+      <publicationStmt status="1">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
@@ -73,7 +73,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-08-12T08:31:38.951Z" user="admin">12/08/2022 08:31:38</note>
+        <note type="lastUpdated" date-time="2022-09-21T08:39:57.787Z" user="admin">21/09/2022 08:39:57</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T15:04:03.28Z" user="line-tofte">2.h</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-06-10T09:50:51.422Z" user="line-tofte">Auto (update-contributors)</note>
@@ -116,6 +116,8 @@
         <note type="updated" update="text-version" value="0.0.10" date-time="2022-08-02T13:45:46.934Z" user="line-tofte">Auto (update-contributors)</note>
           <note type="updated" update="translation-status" value="1.a" date-time="2022-08-12T08:31:30.386Z" user="sameer">1.a</note>
           <note type="updated" update="text-version" value="1.0.0" date-time="2022-08-12T08:31:30.386Z" user="sameer">First published version</note>
+          <note type="updated" update="translation-status" value="1" date-time="2022-09-21T08:39:49.554Z" user="sameer">1</note>
+          <note type="updated" update="text-version" value="1.0.1" date-time="2022-09-21T08:39:49.554Z" user="sameer">Included in App v2.3</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -8036,7 +8038,7 @@
             York: Oxford University Press, 2008.</bibl>
         </div>
       </div>
-      <div type="glossary" status="excluded">
+      <div type="glossary">
         <list type="glossary">
 
           <item>
@@ -8720,16 +8722,13 @@
             </gloss>
                     </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-066-015-1290">
-              <term>Mahāsannipāta</term>
-              <term xml:lang="Bo-Ltn">’dus pa chen po </term>
-              <term xml:lang="bo">འདུས་པ་ཆེན་པོ།</term>
-              <term xml:lang="Sa-Ltn">Mahāsannipāta</term>
-              <term type="definition">A collection of seventeen sūtras on a range of themes,
-                compiled as a separate collection. Today, this collection only exists in Chinese
-                translation, although several of the individual scriptures exist in Sanskrit and in
-                Tibetan translation. </term>
-            </gloss>
+                        <gloss xml:id="UT22084-066-015-1290" type="text" mode="match">
+                            <term>Mahāsannipāta</term>
+                            <term xml:lang="Bo-Ltn">’dus pa chen po</term>
+                            <term xml:lang="bo">འདུས་པ་ཆེན་པོ།</term>
+                            <term xml:lang="Sa-Ltn">Mahāsannipāta</term>
+                            <term type="definition">A collection of seventeen sūtras on a range of themes, compiled as a separate collection. Today, this collection only exists in Chinese translation, although several of the individual scriptures exist in Sanskrit and in Tibetan translation. </term>
+                        </gloss>
                     </item>
           <item>
                         <gloss type="term" xml:id="UT22084-066-015-1291">
@@ -10230,18 +10229,14 @@
               <term xml:lang="Bo-Ltn">sarba dz+nyA de ba </term>
               <term xml:lang="bo">སརྦ་ཛྙཱ་དེ་བ།</term>
               <term xml:lang="Sa-Ltn">Sarvajñādeva</term>
-              <term type="definition">According to traditional accounts, the Kashmiri abbot
+              <!--<term type="definition">According to traditional accounts, the Kashmiri abbot
                 Sarvajñādeva was among the “one hundred” paṇḍitas invited by Trisong Detsen (r.
                 755–797/800) to assist with the translation of the Buddhist scriptures into Tibetan.
                 Sarvajñādeva assisted in the translation of more than twenty-three works, including
-                numerous sūtras and the first translations of Śāntideva’s <title xml:lang="Sa-Ltn">
-                                    <ref rend="pending" target="http://read.84000.co/translation/toh3871.html">Bodhi­caryāvatāra</ref>
-                                </title> and Nāgārjuna’s <title xml:lang="Sa-Ltn">
-                                    <ref rend="pending" target="http://read.84000.co/translation/toh4192.html">Suhṛllekha</ref>
-                                </title>. Much of this work was likely carried out in the first
+                numerous sūtras and the first translations of Śāntideva’s <title xml:lang="Sa-Ltn"><ref rend="pending" target="http://read.84000.co/translation/toh3871.html">Bodhi­caryāvatāra</ref></title> and Nāgārjuna’s <title xml:lang="Sa-Ltn"><ref rend="pending" target="http://read.84000.co/translation/toh4192.html">Suhṛllekha</ref></title>. Much of this work was likely carried out in the first
                 years of the ninth century and may have continued into the reign of Ralpachen, who
                 ascended the throne in 815 and died in 838 or 841 <hi rend="small-caps">ce</hi>.
-              </term>
+              </term>-->
             </gloss>
                     </item>
           <item>
@@ -10359,7 +10354,7 @@
               <term xml:lang="Bo-Ltn">dpal brtsegs </term>
               <term xml:lang="bo">དཔལ་བརྩེགས།</term>
               <term xml:lang="Sa-Ltn"/>
-              <term type="definition">Paltsek, from the village of Kawa north of Lhasa, was one of
+              <!--<term type="definition">Paltsek, from the village of Kawa north of Lhasa, was one of
                 Tibet’s preeminent translators. He was one of the first seven Tibetans to be
                 ordained by Śāntarakṣita and is counted by the later tradition as one of Guru
                 Rinpoche’s twenty-five close disciples. In a <term type="ignore">famous</term> verse
@@ -10370,7 +10365,7 @@
                 most important editors of the early period, one of nine translators installed by
                 Trisong Detsen to supervise the translation of the Tripiṭaka and help catalog
                 translated works for the first two of three imperial catalogs (the <title xml:lang="Bo-Ltn">ldan kar ma</title> and <title xml:lang="Bo-Ltn">bsam yas mchims
-                  phu ma</title> catalogs).</term>
+                  phu ma</title> catalogs).</term>-->
             </gloss>
                     </item>
 
