--- a/translations/kangyur/translations/072-033_toh333-the_sutra_of_vasistha.xml
+++ b/translations/kangyur/translations/072-033_toh333-the_sutra_of_vasistha.xml
@@ -34,7 +34,7 @@
                                         Norbu</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.1.0 <date>2022</date>
+                <edition>v 1.1.1 <date>2022</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -76,7 +76,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-09-20T17:34:38.439Z" user="admin">20/09/2022 17:34:38</note>
+                                <note type="lastUpdated" date-time="2022-09-22T10:25:39.237Z" user="admin">22/09/2022 10:25:39</note>
                                 <note type="updated" update="translation-status" value="4" date-time="2021-10-25T12:25:44.636Z" user="line-tofte">4</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-25T12:25:44.636Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="3" date-time="2021-10-29T14:17:40.208Z" user="line-tofte">3</note>
@@ -131,6 +131,7 @@
                             <note type="updated" update="translation-status" value="1.a" date-time="2022-09-13T13:28:54.698Z" user="martina-cotter">1.a</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2022-09-13T13:28:54.698Z" user="martina-cotter">First published version</note>
                             <note type="updated" update="text-version" value="1.1.0" date-time="2022-09-20T17:34:34.446Z" user="john">Some edits of meaning to 1.4 and 1.5 and changed "dominion over humans" throughout. </note>
+                            <note type="updated" update="text-version" value="1.1.1" date-time="2022-09-22T10:25:35.078Z" user="john">Further edits to translation and notes.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -280,7 +281,12 @@
                                                   (i.e., AN 8.44) follows the <title xml:lang="Pi-Ltn">Vitthatūposathasutta</title>,
                                                   but it also goes on to laud the benefits of
                                                   observing the <foreign xml:lang="Pi-Ltn" type="term">uposatha</foreign> in general.
-                                                  Moreover, the <title xml:lang="Pi-Ltn">Vāseṭṭhasutta</title> one finds in Sutta Nipāta
+                                                  The <title xml:lang="Pi-Ltn">Vāseṭṭhasutta</title> one finds in Sutta Nipāta
+                                                  3.9 (cf. Majjhima Nikāya 98) is a sutta in which a
+                                                  brahmin named Vāseṭṭha asks the Buddha how to
+                                                  discern who is a true brahmin, and deals more with the topic of lay
+                                                  ethics in general without mention of the <foreign xml:lang="Pi-Ltn" type="term">uposatha</foreign>. 
+                                                          <!--Moreover, the <title xml:lang="Pi-Ltn">Vāseṭṭhasutta</title> one finds in Sutta Nipāta
                                                   3.9 (cf. Majjhima Nikāya 98)—a sutta in which a
                                                   brahmin named Vāseṭṭha asks the Buddha how to
                                                   discern who is a true brahmin—resonates with
@@ -295,7 +301,7 @@
                                                   one reads widely across the suttas, one finds that
                                                   <title xml:lang="en">The Sūtra of Vasiṣṭha</title>
                                                   echoes these and many others on the topic of lay
-                                                  ethics. For resonance with works that can be found
+                                                  ethics.--> For resonance with works that can be found
                                                   within the Tengyur, it is worth mentioning
                                                   Sunāyaśrīmitra’s <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh4141.html" rend="pending">Eight Verses on the Vows of
@@ -475,11 +481,11 @@
                                                   n. 573; Bodhi 2012, p. 1642, n. 387.</note> as
                                                 well?”</p>
                                         <milestone unit="chunk" xml:id="UT22084-072-033-198"/>
-                                        <p tid="88">“O, Gautama,” replied Vasiṣṭha, “what will become of someone who maintains
+                                        <p tid="88">“O, Gautama,” replied Vasiṣṭha, “what will become of those who maintain
                                                 the eightfold observance of the noble ones and
-                                                practices diligently on special days?”</p>
-                                        <p tid="89">The Blessed One responded, “Such a brahmin will
-                                                experience all that gods and humans wish.”<!--<note place="end" xml:id="UT22084-072-033-200"> This
+                                                practice diligently on special days?”</p>
+                                        <p tid="89">The Blessed One responded, “Those brahmins will
+                                                experience all they wish for among gods and humans.”<!--<note place="end" xml:id="UT22084-072-033-200"> This
                                                   sense of a brahmin as one who carries out the
                                                   wishes of or pleases gods and humans can be found,
                                                   for example, at <title xml:lang="Sa-Ltn">Śatapatha
@@ -507,8 +513,7 @@
                                         <p tid="90">“Gautama, what is the so-called eightfold
                                                 observance of the noble ones?” asked Vasiṣṭha. “And
                                                 how, by adhering to the eightfold observance of the
-                                                noble ones, will one experience all that gods and
-                                                humans wish?”</p>
+                                                noble ones, will one experience all one wishes for among gods and humans?”</p>
                                         <p tid="91">“Vasiṣṭha, when faithful sons or daughters of
                                                 good families want to maintain the eightfold
                                                 observance of the noble ones, they get up in the
@@ -573,11 +578,9 @@
                                         <p tid="93">“Recite thus a second and a third time.
                                                 Vasiṣṭha, this is the eightfold observance of the
                                                 noble ones, and thus, by maintaining the eightfold
-                                                observance of the noble ones, one will fulfill the
-                                                wishes of gods and humans. Vasiṣṭha, you should
+                                                observance of the noble ones, one will experience all one wishes for among gods and humans. Vasiṣṭha, you should
                                                 maintain the eightfold observance of the noble ones,
-                                                practice diligently on special days, and fulfill the
-                                                wishes of gods and humans!</p>
+                                                practice diligently on special days, and experience all you wish for among gods and humans!</p>
                                         <milestone unit="chunk" xml:id="UT22084-072-033-207"/>
                                         <p tid="94">“Regarding the merit of those faithful sons or
                                                 daughters of good families who maintain the
@@ -671,8 +674,7 @@
                                                 benefit; such is the great power; such is the
                                                 abundance. Vasiṣṭha, maintain the eightfold
                                                 observance of the noble ones, practice diligently on
-                                                special days, and experience all that gods and
-                                                humans wish!”</p>
+                                                special days, and experience all you wish for among gods and humans!”</p>
                                         <milestone unit="chunk" xml:id="UT22084-072-033-215"/>
                                         <p tid="101">The brahmin Vasiṣṭha then replied to the
                                                 Blessed One with these words: “O Gautama, now
@@ -767,9 +769,17 @@
                                                 maintain the eightfold observance of the noble ones,
                                                 practice diligently on special days, and experience all that gods and humans wish! </p>
                                         <milestone unit="chunk" xml:id="UT22084-072-033-224"/>
-                                        <p tid="103">“Furthermore, Vasiṣṭha, when compared to the
-                                                happiness of the gods, the dominion of the human realm is
-                                                paltry. That which among humans is fifty years is
+                                        <p tid="103">“Furthermore, Vasiṣṭha, in comparison to the
+                                                happiness of the god realms, sovereignty<note place="end" xml:id="UT22084-072-033-308">Tib. 
+                                                <foreign xml:lang="Bo-Ltn">rgyal srid</foreign>, literally “kingship” or “kingdom,” is an unexpected term here, 
+                                                not having been mentioned so far in the comparisons of merit. The term is sometimes found
+                                        as a synonym of <foreign xml:lang="Bo-Ltn">mtho ris</foreign>, “the higher realms,” but we have chosen 
+                                                        to interpret this term in line with the parallels to this part of the text in the 
+                                                        Pali (as seen in the <title xml:lang="Pi-Ltn">Vitthatūposathasutta</title>, AN 8.42 
+                                                        and the texts that follow it, see <ptr target="#UT22084-072-033-183"/>) where the comparison made is with the 
+                                                        worth of kingship over the countries mentioned in the preceding passage, rather than (as in this text) with 
+                                                        the merit of making of offerings with the precious substances contained in them.</note> in the human realm is
+                                                of paltry worth. That which among humans is fifty years is
                                                 but one day for the gods of the Heaven of the Four
                                                 Great Kings. Fifteen of those spans of one day equal
                                                 half a month, and thirty such days equal a month,
@@ -793,8 +803,8 @@
                                                 time, will be a rebirth equal in status to the gods
                                                 of the Heaven of the Four Great Kings. Vasiṣṭha,
                                                 this is what I had in mind when I proclaimed,
-                                                ‘Compared to the happiness of the gods, the dominion
-                                                of the human realm is paltry.’</p>
+                                                ‘In comparison to the happiness of the god realms, sovereignty
+                                                in the human realm is of paltry worth.’</p>
                                         <milestone unit="chunk" xml:id="UT22084-072-033-226"/>
                                         <p tid="104">“That which among humans is one hundred years
                                                 is but one day for the gods of the Heaven of the
@@ -811,9 +821,8 @@
                                                 noble ones a single time, <ref cRef="F.267.a" type="folio" xml:id="UT22084-072-033-246"/> will
                                                 be a rebirth equal in status to the gods of the
                                                 Heaven of the Thirty-Three. Vasiṣṭha, this is what I
-                                                had in mind when I proclaimed, ‘Compared to the
-                                                happiness of the gods, the dominion
-                                                of the human realm is paltry.’</p>
+                                                had in mind when I proclaimed, ‘In comparison to the happiness of the god realms, sovereignty
+                                                in the human realm is of paltry worth.’</p>
                                         <milestone unit="chunk" xml:id="UT22084-072-033-227"/>
                                         <p tid="105">“Vasiṣṭha, that which among humans is two
                                                 hundred years is but one day for the gods of the
@@ -836,9 +845,8 @@
                                                 eightfold observance of the noble ones a single
                                                 time, will be a rebirth equal in status to the gods
                                                 of the Heaven Free from Strife. Vasiṣṭha, this is
-                                                what I had in mind when I proclaimed, ‘Compared to
-                                                the happiness of the gods, the dominion
-                                                of the human realm is paltry.’</p>
+                                                what I had in mind when I proclaimed, ‘In comparison to the happiness of the god realms, sovereignty
+                                                in the human realm is of paltry worth.’</p>
                                         <milestone unit="chunk" xml:id="UT22084-072-033-229"/>
                                         <p tid="106">“Vasiṣṭha, that which among humans is four
                                                 hundred years is but one day for the gods of the
@@ -855,9 +863,8 @@
                                                 eightfold observance of the noble ones a single
                                                 time, will be a rebirth equal in status to the gods
                                                 of the Heaven of Joy. Vasiṣṭha, this is what I had
-                                                in mind when I proclaimed, ‘Compared to the
-                                                happiness of the gods, the dominion
-                                                of the human realm is paltry.’</p>
+                                                in mind when I proclaimed, ‘In comparison to the happiness of the god realms, sovereignty
+                                                in the human realm is of paltry worth.’</p>
                                         <milestone unit="chunk" xml:id="UT22084-072-033-307"/>
                                         <p tid="107">“Vasiṣṭha, that which among humans is eight
                                                 hundred years <ref cRef="F.267.b" type="folio" xml:id="UT22084-072-033-247"/> is but one day for
@@ -882,9 +889,8 @@
                                                 a single time, will be a rebirth equal in status to
                                                 the gods of the Heaven of Delighting in Emanations.
                                                 Vasiṣṭha, this is what I had in mind when I
-                                                proclaimed, ‘Compared to the happiness of the gods,
-                                                the dominion
-                                                of the human realm is paltry.’</p>
+                                                proclaimed, ‘In comparison to the happiness of the god realms, sovereignty
+                                                in the human realm is of paltry worth.’</p>
                                         <milestone unit="chunk" xml:id="UT22084-072-033-232"/>
                                         <p tid="108">“Vasiṣṭha, that which among humans is sixteen
                                                 hundred years is but one day for the gods of the
@@ -918,12 +924,11 @@
                                                 noble ones a single time, will be a rebirth equal in
                                                 status to the gods of the Heaven of Making Use of
                                                 Others’ Emanations. Vasiṣṭha, this is what I had in
-                                                mind when I proclaimed, ‘Compared to the happiness
-                                                of the gods, the dominion
-                                                of the human realm is paltry.’</p>
+                                                mind when I proclaimed, ‘In comparison to the happiness of the god realms, sovereignty
+                                                in the human realm is of paltry worth.’</p>
                                         <p tid="109">“Vasiṣṭha, maintain the eightfold observance of
                                                 the noble ones, practice diligently on special days,
-                                                and fulfill the wishes of gods and humans!”</p>
+                                                and experience all you wish for among gods and humans!”</p>
                                         <milestone unit="chunk" xml:id="UT22084-072-033-235"/>
                                         <p tid="110">The brahmin Vasiṣṭha then said these words to
                                                 the Blessed One: <ref cRef="F.268.a" type="folio" xml:id="UT22084-072-033-248"/> “O Gautama, for a
