--- a/translations/kangyur/translations/044-001_toh81-simhas_questions.xml
+++ b/translations/kangyur/translations/044-001_toh81-simhas_questions.xml
@@ -37,11 +37,11 @@
         <editor role="TEImarkupEditor" ref="eft:person-108">André Rodrigues</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.4 <date>2022</date>
+                <edition>v 1.0.0 <date>2022</date>
                 </edition>
             </editionStmt>
 
-      <publicationStmt status="2">
+      <publicationStmt status="1.a">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
@@ -75,7 +75,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-09-15T14:52:02.901Z" user="admin">15/09/2022 14:52:02</note>
+        <note type="lastUpdated" date-time="2022-09-23T14:49:57.928Z" user="admin">23/09/2022 14:49:57</note>
         <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-11-04T09:32:27.59Z" user="andreas">v 0.1.0</note>
         <note type="updated" update="translation-status" value="2.e" date-time="2019-11-04T09:32:27.59Z" user="andreas">2.e</note>
         <note type="updated" update="translation-status" value="2.f" date-time="2020-01-27T13:10:23.67Z" user="mike">2.f</note>
@@ -103,6 +103,8 @@
         <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-12T11:51:03.044Z" user="line-tofte">Auto (update-publication-status)</note>
         <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-12T11:51:34.263Z" user="line-tofte">Auto (update-contributors)</note>
           <note type="updated" update="text-version" value="0.0.4" date-time="2022-09-15T14:51:54.832Z" user="line-tofte">Auto (update-contributors)</note>
+          <note type="updated" update="translation-status" value="1.a" date-time="2022-09-23T14:49:49.926Z" user="andre">1.a</note>
+          <note type="updated" update="text-version" value="1.0.0" date-time="2022-09-23T14:49:49.926Z" user="andre">First published September 23, 2022</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -237,7 +239,7 @@
             emanation of Maitreya, in an eon called Great Illumination, establish buddhafields “like
             that of Amitābha.”</p>
           <milestone unit="chunk" xml:id="UT22084-044-001-18"/>
-          <p tid="17">Prince Siṃha himself is an elusive figure within Buddhist literature. While
+          <p tid="17">Prince Siṃha himself is an elusive figure in Buddhist literature. While
             his father, King Ajātaśatru, is quite famous in the sūtras, any mention of this
             particular Siṃha seems to be unique to this sūtra. King Ajātaśatru’s other son and
             eventual successor, Udayabhadra, is much better known in the histories and literature,
@@ -354,7 +356,7 @@
             <l>All of them set out for awakening. </l>
             <l>By the power of the perfect Buddha, </l>
             <l>They became fearless.<note place="end" xml:id="UT22084-044-001-39"> These last two
-                lines in verse 4 are not found in the Sanskrit or any of the Chinese.</note> {4}</l>
+                lines in verse 4 are not found in the Sanskrit edition or any of the Chinese translations.</note> {4}</l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-044-001-40"/>
           <lg tid="32">
@@ -509,7 +511,7 @@
           </lg>
           <milestone unit="chunk" xml:id="UT22084-044-001-76"/>
           <lg tid="45">
-            <l>“Inopportune births are relinquished through faith.<note place="end" xml:id="UT22084-044-001-77"> Sanskrit: <foreign xml:lang="Sa-Ltn" type="quote">śrāddho ’kṣaṇaṃ varjayati</foreign>. Śikṣ quotes as <foreign xml:lang="Sa-Ltn" type="quote">śrāddhayā kṣaṇaṃ akṣaṇaṃ varjayati</foreign> (“Opportune and
+              <l>“Inopportune births are relinquished through faith.<note place="end" xml:id="UT22084-044-001-77"> Sanskrit: <foreign xml:lang="Sa-Ltn" type="quote">śrāddho ’kṣaṇaṃ varjayati</foreign>. Śikṣ quotes as <foreign xml:lang="Sa-Ltn" type="quote">śrāddhayā kṣaṇam akṣaṇaṃ varjayati</foreign> (“Opportune and
                 inopportune births are relinquished through faith”).</note>
                         </l>
             <l>One goes forth to favorable states through moral discipline.</l>
@@ -562,7 +564,7 @@
             <l>One pleases beings<note place="end" xml:id="UT22084-044-001-91"> For this line,
                 Taishō 310 has “One makes those who see them feel delighted” (<foreign xml:lang="zh" type="quote">見者皆歡喜</foreign>).</note>
                         </l>
-            <l>By relinquishing senseless talk and slander.”<note place="end" xml:id="UT22084-044-001-92"> Here the Tibetan term <foreign xml:lang="Bo-Ltn" type="term">phra ma</foreign> (“slander”) is not found in the Sanskrit manuscript
+              <l>By relinquishing senseless talk and slander.”<note place="end" xml:id="UT22084-044-001-92">Here an equivalent of the Tibetan term <foreign xml:lang="Bo-Ltn" type="term">phra ma</foreign> (“slander”) is not found in the Sanskrit manuscript
                 (which would have read as <foreign xml:lang="Sa-Ltn" type="term">piśuna</foreign> or
                   <foreign xml:lang="Sa-Ltn" type="term">paiśunya</foreign>), though it is found in
                 Taishō 310. See also Silk’s analysis of this section, where he offers a very
@@ -577,7 +579,7 @@
                 “O Great Sage” (<foreign xml:lang="Sa-Ltn" type="term">mahāmune</foreign>).</note>
             </l>
             <l>Does a retinue<note place="end" xml:id="UT22084-044-001-95"> Following the Sanskrit,
-                which gives the singular <foreign xml:lang="Sa-Ltn" type="term">aparivāra</foreign>.
+                which gives the singular <foreign xml:lang="Sa-Ltn" type="term">pārivara</foreign>.
                 The Tibetan has <foreign xml:lang="Bo-Ltn" type="term">g.yog ’khor rnams</foreign>
                 (“attendants”).</note> come to be undivided?” {23}</l>
           </lg>
@@ -647,7 +649,7 @@
           <milestone unit="chunk" xml:id="UT22084-044-001-108"/>
           <lg tid="56">
             <l>“O Guide, how do the defilements of bodhisattvas<note place="end" xml:id="UT22084-044-001-109"> This translation follows the reading in the Sanskrit
-                witness, which gives the plural <foreign xml:lang="Sa-Ltn" type="term">bodhisattvānāṃ</foreign>.</note>
+                witness, which gives the plural <foreign xml:lang="Sa-Ltn" type="term">bodhisattvānām</foreign>.</note>
                         </l>
             <l>Come to be exhausted?</l>
             <l>How do they recollect previous lives?</l>
@@ -737,7 +739,7 @@
             <l>Never be abandoned even in a dream, <ref cRef="F.29.a" type="folio" xml:id="UT22084-044-001-293"/>
                         </l>
             <l>Let alone while awake?”<note place="end" xml:id="UT22084-044-001-129"> This last line
-                of the verse is absent in Taishō 310.</note> {37}<note place="end" xml:id="UT22084-044-001-130"> The following two verses, 37 and 38, are found quoted
+                of the verse is absent in Taishō 310.</note> {37}<note place="end" xml:id="UT22084-044-001-130"> The following two verses, 37 and 38, are quoted
                 in Śīkṣ. The content is quite similar to the Sanskrit manuscript. However, Siṃha’s
                 question has been changed to a statement by exchanging the interrogative (<foreign xml:lang="Sa-Ltn" type="term">kena</foreign>) for a demonstrative pronoun
                   (<foreign xml:lang="Sa-Ltn" type="term">tena</foreign>). </note>
@@ -783,7 +785,7 @@
           <lg tid="68">
             <l>Having heard this teaching </l>
             <l>On the conduct of bodhisattvas<note place="end" xml:id="UT22084-044-001-141">Reading
-                the Sanskrit, which gives the plural <foreign xml:lang="Sa-Ltn" type="term">bodhisattvānāṃ</foreign>.</note>
+                the Sanskrit, which gives the plural <foreign xml:lang="Sa-Ltn" type="term">bodhisattvānām</foreign>.</note>
                         </l>
             <l>Directly from the Guardian of the World,</l>
             <l>Siṃha<note place="end" xml:id="UT22084-044-001-142"> Sanskrit has <foreign xml:lang="Sa-Ltn" type="term">nṛpātmaja</foreign> (“son of the king”), rather than
@@ -815,7 +817,7 @@
             <l>Ajita then asked the Buddha</l>
             <l>The following question:</l>
             <l>“Why did you smile?</l>
-            <l>Great Sage,<note place="end" xml:id="UT22084-044-001-150"> Tib. <foreign xml:lang="Bo-Ltn" type="term">thub chen</foreign>; Sanskrit has “Lord” (<foreign xml:lang="Sa-Ltn" type="term">vibho</foreign>).</note> please explain this!”<note place="end" xml:id="UT22084-044-001-151"> In Taishō 310, “please explain this” is
+            <l>Great Sage,<note place="end" xml:id="UT22084-044-001-150"> Tib. <foreign xml:lang="Bo-Ltn" type="term">thub chen</foreign>; Sanskrit has the vocative “Lord” (<foreign xml:lang="Sa-Ltn" type="term">vibho</foreign>).</note> please explain this!”<note place="end" xml:id="UT22084-044-001-151"> In Taishō 310, “please explain this” is
                 followed by “to rid us of doubts” (<foreign xml:lang="zh" type="quote">斷除疑惑</foreign>).</note> {43}<note place="end" xml:id="UT22084-044-001-152"> This
                 verse is expanded by the two lines of verse in the Tibetan. It is of regular meter
                 length in the Sanskrit.</note>
@@ -847,7 +849,7 @@
                 (according to Vinītā’s emendation, <foreign xml:lang="Sa-Ltn" type="term">upahāya</foreign> is found in the Sanskrit manuscript). Vinītā 2010, p. 498, n.
                 4.</note> Dīpaṅkara—</l>
             <l>The perfect buddha,<note place="end" xml:id="UT22084-044-001-162"> Sanskrit has
-                  <foreign xml:lang="Sa-Ltn" type="term">mahārṣiṃ</foreign> (“great sage”). </note>
+                  <foreign xml:lang="Sa-Ltn" type="term">mahārṣim</foreign> (“great sage”). </note>
               supreme among people<note place="end" xml:id="UT22084-044-001-163"> The phrase
                 “supreme among people” is absent in the Chinese.</note>—</l>
             <l>I have been ripening</l>
@@ -1210,7 +1212,7 @@
               Prakrit</title>. Calcutta: University of the Panjab, Lahore, 1917.</bibl>
         </div>
       </div>
-      <div type="glossary" status="excluded">
+      <div type="glossary">
         <list type="glossary">
           <item>
             <gloss xml:id="UT22084-044-001-235" type="term" mode="match">
@@ -1670,7 +1672,7 @@
               <term xml:lang="bo">མཐའ་གཉིས།</term>
               <term xml:lang="Sa-Ltn">antadvaya</term>
               <term xml:lang="Sa-Ltn">śāśvatocchedāntadvaya</term>
-              <term type="definition">The two views of (1) eternalism (<foreign xml:lang="Sa-Ltn" type="term">nityānta</foreign>), the belief in a permanent, causeless creator
+                <term type="definition">The two views of (1) eternalism (<foreign xml:lang="Sa-Ltn" type="term">śāśvatānta</foreign>), the belief in a permanent, causeless creator
                 and/or the belief in an independent, permanent, singular self; and (2) nihilism
                   (<foreign xml:lang="Sa-Ltn" type="term">ucchedānta</foreign>), the belief that
                 things ultimately do not exist and/or the denial of the law of cause and effect or
